aggiunta funzione su Compilatore.sh